<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">Go4Lunch</string>
    <string name="go4lunch">Go4Lunch</string>
    <string name="find_a_nice_restaurant_and_invite_your_co_workers_for_lunch">Find a nice restaurant and invite your
        co-workers for lunch!
    </string>
    <string name="login">Login</string>
    <string name="facebook_application_id" translatable="false">2462712987296819</string>
    <string name="facebook_login_protocol_scheme" translatable="false" tools:ignore="UnusedResources">
        fb2462712987296819
    </string>
    <string name="username">Username</string>
    <string name="email_address">Email address :</string>
    <string name="title_activity_logged">LoggedActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>
    <string name="info_no_email_found">No email found</string>
    <string name="info_no_username_found">No username found</string>
    <string name="delete_your_account">Delete your account</string>
    <string name="message_confirm_delete_account">Do you really want to delete your account ?</string>
    <string name="yes">Yes</string>
    <string name="cancel">Cancel</string>
    <string name="unknow_error">Unknow error</string>
    <string name="new_username">New UserName</string>
    <string name="update">Update</string>
    <string name="error_email_not_found">Email Not Found</string>
    <string name="logout">Logout</string>
    <string name="map_view">Map View</string>
    <string name="list_view">List View</string>
    <string name="workmates">Workmates</string>
    <string name="i_am_hungry">I\'m Hungry !</string>
    <string name="title_activity_maps">Map</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="third_star">Third star</string>
    <string name="second_star">second star</string>
    <string name="first_star">First star</string>
    <string name="_42">(42)</string>
    <string name="_232m">232m</string>
    <string name="image_of_restaurant">Image of Restaurant</string>
    <string name="open_until_2pm">Open until 2pm</string>
    <string name="this_is_an_address_for_a_restaurant">This is an address for a restaurant</string>
    <string name="restaurant_name_here">Restaurant name here</string>
    <string name="closed_today">Closed today !</string>
    <string name="no_opening_hours">No opening hours known here !</string>
    <string name="test_de_phrase_ici">Test de phrase ici</string>

</resources>
