<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:padding="10dp">

    <TextView
            android:id="@+id/recycler_view_item_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            android:text="@string/restaurant_name_here"
            android:textColor="@android:color/black"
            android:textSize="20sp"
            android:padding="2dp"/>

    <TextView
            android:id="@+id/recycler_view_item_address"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@id/recycler_view_item_name"
            android:text="@string/this_is_an_address_for_a_restaurant"
            android:textSize="15sp"
            android:padding="2dp"/>

    <TextView
            android:id="@+id/recycler_view_item_timetable"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/recycler_view_item_address"
            app:layout_constraintLeft_toLeftOf="parent"
            android:text="@string/open_until_2pm"
            android:textSize="15sp"
            android:padding="2dp"
            android:textStyle="italic"/>

    <ImageView
            android:id="@+id/recycler_view_item_image"
            android:layout_width="76dp"
            android:layout_height="76dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:contentDescription="@string/image_of_restaurant"
            tools:src="@tools:sample/avatars"
            android:padding="2dp"/>

    <TextView
            android:id="@+id/recycler_view_item_distance"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintRight_toLeftOf="@id/recycler_view_item_image"
            android:text="@string/_232m"
            android:padding="2dp"/>

    <TextView
            android:id="@+id/recycler_view_item_votes"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/recycler_view_item_distance"
            app:layout_constraintRight_toLeftOf="@id/recycler_view_item_image"
            android:padding="2dp"
            android:drawableStart="@drawable/ic_person_outline_black_24dp"
            android:text="@string/_42"
            android:textStyle="bold"
            android:gravity="bottom"/>

    <ImageView
            android:id="@+id/recycler_view_item_first_star"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintRight_toLeftOf="@id/recycler_view_item_image"
            app:layout_constraintTop_toBottomOf="@id/recycler_view_item_votes"
            android:src="@drawable/ic_star_yellow_500_24dp"
            android:contentDescription="@string/first_star"/>

    <ImageView
            android:id="@+id/recycler_view_item_second_star"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintRight_toLeftOf="@id/recycler_view_item_first_star"
            app:layout_constraintTop_toBottomOf="@id/recycler_view_item_votes"
            android:src="@drawable/ic_star_yellow_500_24dp"
            android:contentDescription="@string/second_star"/>

    <ImageView
            android:id="@+id/recycler_view_item_third_star"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintRight_toLeftOf="@id/recycler_view_item_second_star"
            app:layout_constraintTop_toBottomOf="@id/recycler_view_item_votes"
            android:src="@drawable/ic_star_yellow_500_24dp"
            android:contentDescription="@string/third_star"/>



</androidx.constraintlayout.widget.ConstraintLayout>