<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="@dimen/nav_header_height"
        android:background="@color/colorPrimary"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:orientation="vertical">

    <TextView
            android:id="@+id/app_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/app_name"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            android:textSize="42sp"
            android:textColor="@color/textColorPrimarySecondary"
            android:textStyle="bold"/>

    <ImageView
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:paddingEnd="8dp"
            app:srcCompat="@mipmap/ic_launcher_round"
            android:contentDescription="@string/nav_header_desc"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintWidth_percent="0.15"
            app:layout_constraintHeight_percent="0.3"
            android:id="@+id/nav_header_imageView_user_image" tools:ignore="RtlSymmetry"/>

    <TextView
            android:id="@+id/nav_header_text_user_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/textColorPrimarySecondary"
            app:layout_constraintLeft_toRightOf="@id/nav_header_imageView_user_image"
            app:layout_constraintTop_toBottomOf="@id/app_name"
            app:layout_constraintBottom_toBottomOf="parent"
            android:textSize="16sp"
            android:textStyle="bold"
            android:text="@string/nav_header_title"/>

    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/textColorPrimarySecondary"
            app:layout_constraintTop_toBottomOf="@id/nav_header_text_user_name"
            app:layout_constraintLeft_toRightOf="@id/nav_header_imageView_user_image"
            app:layout_constraintBottom_toBottomOf="parent"
            android:text="@string/nav_header_subtitle"
            android:id="@+id/nav_header_text_user_email"/>

</androidx.constraintlayout.widget.ConstraintLayout>
