<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MainActivity">

    <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/activity_main_image_logo"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:src="@drawable/ic_launcher_foreground"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintWidth_percent="0.8"
            app:layout_constraintHeight_percent="0.5"
    />


    <TextView
            android:id="@+id/activity_main_name_app"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/go4lunch"
            android:textSize="60sp"
            android:textColor="#000000"
            app:layout_constraintBottom_toBottomOf="@id/activity_main_image_logo"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"/>

    <TextView
            android:id="@+id/activity_main_text_logo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/find_a_nice_restaurant_and_invite_your_co_workers_for_lunch"
            android:textColor="#000000"
            app:layout_constraintTop_toBottomOf="@id/activity_main_name_app"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"/>

    <Button
            android:id="@+id/activity_main_button_login_mail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/login"
            android:background="@color/colorSecondary"
            android:textSize="20sp"
            android:textColor="@color/textColorPrimarySecondary"
            style="?android:attr/borderlessButtonStyle"
            android:layout_margin="20dp"
            android:padding="4dp"
            app:layout_constraintTop_toBottomOf="@id/activity_main_text_logo"/>

</androidx.constraintlayout.widget.ConstraintLayout>